# petsc_3_10_3_goparots

./: CMakeLists.txt  configure.log.bkp
lib/petsc/conf/: petscvariables
src/snes/examples/tutorials/network/power/: .power.c.swp  CMakeLists.txt  PFReadData.c  power.c  power.c.mod  power.h
